--- a/src/view/css/style.styl
+++ b/src/view/css/style.styl
@@ -20,7 +20,8 @@ body, html
     font-family     "华文细黑", "微软雅黑Light", "微软雅黑", "黑体", "Arial"
     width           100%
     height          100%
-    background      #eee;
+    background      #eee
+    background-size: cover;
     color: #222;
 
 *
