--- a/src/view/css/style.styl
+++ b/src/view/css/style.styl
@@ -34,18 +34,23 @@ body, html
     height: 100%;
     position: fixed;
     top: 0;
+    left: 0;
     z-index: 0;
-    transition: opacity 2s;
 
     img
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         width: 100%;
+        transition: opacity 2s;
 
     img.full-height
         height: 100%;
         width: auto;
 
-.bg-hover.ng-hide
-    opacity: 0;
+    img.ng-hide
+        opacity: 0;
 
 .container
     max-width: 800px;
@@ -61,7 +66,7 @@ body, html
         padding-top: 20px;
         text-align: center;
         font-size: 150%;
-        text-shadow: 0px 0px 100px #000;
+        text-shadow: 0px 0px 1px #eee;
 
         h1
             margin: 0;
@@ -76,6 +81,7 @@ body, html
             font-weight: 400;
             font-size: 160%;
             color: #50558b;
+            text-shadow: none;
 
             span:first-child
                 font-family: subMainFont;
