--- a/src/view/index.jade
+++ b/src/view/index.jade
@@ -26,7 +26,7 @@ html(lang="zh-Hans" ng-app="zifferArchive")
                             .name(title="{{track.name}}") {{track.name}}
                             .artist(title="{{track.artist}}") {{track.artist}}
                             .origin(title="{{track.origin}}") {{track.origin}}
-                    .track-back(ng-mouseleave="curState.track=-1")
+                    .track-back
                         .track-staff
                             .noter {{track.workStaff.noter.join(', ')}}
                             .proofer {{track.workStaff.proofer.join(', ')}}
@@ -40,5 +40,5 @@ html(lang="zh-Hans" ng-app="zifferArchive")
                         .back-btn(ng-click="curState.track=-1")
                             i.fa.fa-reply
 
-        .bg-hover.ng-hide-animate(ng-show="curState.track>0")
-            img(ng-src='{{curState.track | getBg}}' ng-class="{'full-height': getImgClass()}")
+        .bg-hover
+            img.ng-hide-animate(ng-repeat="track in tracks" ng-src="{{'images/bgs/'+ track._id +'.jpg'}}" ng-class="{'full-height': getImgClass()}" ng-show="curState.track === track._id")
