Add hover for bgs.

--- a/src/view/index.jade
+++ b/src/view/index.jade
@@ -42,3 +42,4 @@ html(lang="zh-Hans" ng-app="zifferArchive")
 
         .bg-hover
             img.ng-hide-animate(ng-repeat="track in tracks" ng-src="{{'images/bgs/'+ track._id +'.jpg'}}" ng-class="{'full-height': getImgClass()}" ng-show="curState.track === track._id")
+            .hover
