--- a/src/view/css/style.styl
+++ b/src/view/css/style.styl
@@ -52,6 +52,13 @@ body, html
     img.ng-hide
         opacity: 0;
 
+    .hover
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+
 .container
     max-width: 800px;
     margin: 0 auto;
