--- a/src/view/css/style.styl
+++ b/src/view/css/style.styl
@@ -10,7 +10,8 @@ track-box-face()
     background: rgba(255, 255, 255, arguments);
     backface-visibility: hidden;
     transform-style: preserve-3d;
-    transition: transform 1s, opacity 1s;
+    transition: opacity 1s, transform 1s;
+    -webkit-transition: opacity 1s, -webkit-transform 1s;
 
 
 body, html 
@@ -41,8 +42,9 @@ body, html
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        -webkit-transform: translate(-50%, -50%);
         width: 100%;
-        transition: opacity 2s;
+        transition: opacity 2s .5s;
 
     img.full-height
         height: 100%;
@@ -59,7 +61,7 @@ body, html
         left: 0;
 
 .container
-    max-width: 800px;
+    max-width: 1600px;
     margin: 0 auto;
     position: relative;
     margin-bottom: 60px;
@@ -150,6 +152,7 @@ body, html
                 top: 0;
                 track-box-face 0.8
                 transform: rotateY(180deg);
+                -webkit-transform: rotateY(180deg);
                 opacity: 0;
                 z-index: -1;
 
@@ -201,6 +204,7 @@ body, html
                         top: 50%;
                         left: 50%;
                         transform: translate(-50%, -50%);
+                        -webkit-transform: translate(-50%, -50%);
                         height: 200px;
 
                     .hover
@@ -215,6 +219,7 @@ body, html
                         top: 50%;
                         left: 50%;
                         transform: translate(-50%, -50%);
+                        -webkit-transform: translate(-50%, -50%);
                         font-size: 60px;
                         color: #f8f8f8;
 
@@ -252,10 +257,40 @@ body, html
         .track-box
             .track-front
                 transform: rotateY(-180deg);
+                -webkit-transform: rotateY(-180deg);
                 opacity: 0;
                 z-index: -1;
             .track-back
                 transform: rotateY(0deg);
+                -webkit-transform: rotateY(0deg);
                 opacity: 1;
                 z-index: auto;
 
+
+@media (max-width: 410px)
+    .container 
+        width: 100%;
+        overflow: hidden;
+        .track
+            left: 50%;
+            transform: translate(-50%, 0)
+            -webkit-transform: translate(-50%, 0)
+        //Simply animation for mobile devices
+        .track, .track.active
+            .track-box
+                .track-front, .track-back
+                    -webkit-transform: none;
+                    transform: none;
+                    transition: none;
+
+@media (min-width: 410px) and (max-width: 810px)
+    .container 
+        width: 400px;
+
+@media (min-width: 810px) and (max-width: 1210px)
+    .container 
+        width: 800px;
+
+@media (min-width: 1210px) and (max-width: 1610px)
+    .container 
+        width: 1200px;
