--- a/src/view/css/style.styl
+++ b/src/view/css/style.styl
@@ -18,7 +18,7 @@ body, html
     padding         0
     margin          0
     font-size       12px
-    font-family     "华文细黑", "微软雅黑Light", "微软雅黑", "黑体", "Arial", sans-serif
+    font-family     "华文细黑", "微软雅黑", "黑体", "Arial", sans-serif
     width           100%
     height          100%
     background      #eee
@@ -65,7 +65,6 @@ body, html
     max-width: 1600px;
     margin: 0 auto;
     position: relative;
-    margin-bottom: 60px;
     clear: both;
     z-index: 1;
 
@@ -325,6 +324,20 @@ body, html
                 opacity: 1;
                 z-index: auto;
 
+
+.footer
+    text-align: center;
+    width: 100%;
+    font-size: 11px;
+    line-height: 1.25;
+    padding-top: 30px;
+    margin-bottom: 20px;
+    clear: both;
+
+    big
+        color: #ad3535;
+        font-size: 160%;
+        cursor: help;
 
 @media (max-width: 410px)
     .container 
