Header intro RWD hotfix

--- a/src/view/css/style.styl
+++ b/src/view/css/style.styl
@@ -130,7 +130,7 @@ body, html
 
         .intro
             position: absolute;
-            width: 300px;
+            width: 30%;
             left: 50%;
             top: 25px;
             transform: translate(50%, 0);
@@ -388,10 +388,14 @@ body, html
                     -webkit-transform: none;
                     transform: none;
                     transition: none;
+        .intro
+            display: none;
 
 @media (min-width: 410px) and (max-width: 810px)
     .container 
         width: 400px;
+        .intro
+            display: none;
 
 @media (min-width: 810px) and (max-width: 1210px)
     .container 
