--- a/src/view/index.jade
+++ b/src/view/index.jade
@@ -20,7 +20,7 @@ html(lang="zh-Hans" ng-app="zifferArchive")
                     span.ng-hide-animate(ng-show="!openSearch") 归档
                     i.fa.fa-search(ng-class="{active: openSearch}", ng-click="toggleSearch()")
                 .intro(ng-show="showIntro" ng-mouseenter="showIntro=1") <span>Ziffer Project</span> 是一项ACG简谱制作项目，这里留存此项目的归档曲谱。
-                    i
+                    i.fa.fa-caret-left
 
             .search.ng-hide-animate(ng-show="openSearch" ng-model="query")
                 input.search-box(type="text", placeholder="搜索..." ng-model="query")
