--- a/src/view/css/style.styl
+++ b/src/view/css/style.styl
@@ -79,7 +79,6 @@ img
         padding-top: 20px;
         text-align: center;
         font-size: 150%;
-        text-shadow: 0px 0px 1px #eee;
 
         h1
             margin: 0;
@@ -88,6 +87,9 @@ img
             font-size: 300%;
             font-family: mainFont;
             cursor: pointer;
+            text-shadow: 0px 0px 2px #ccc;
+            transition: all .5s;
+            -webkit-text-shadow: 0px 0px 2px #ccc;
 
         h2
             margin: 8px;
@@ -95,7 +97,7 @@ img
             font-weight: 400;
             font-size: 160%;
             color: #50558b;
-            text-shadow: none;
+            transition: all .5s;
 
             i.fa
                 position: absolute;
@@ -165,6 +167,16 @@ img
                 color: rgba(255, 255, 255, 0.8);
                 font-style: normal;
                 font-size: 12px;
+
+    .logo.active
+        h1
+            color: #fff;
+            text-shadow: 0px 0px 2px #333;
+            -webkit-text-shadow: 0px 0px 2px #333;
+        h2
+            color: #ddd;
+            text-shadow: 0px 0px 2px #50558b;
+            -webkit-text-shadow: 0px 0px 2px #50558b;
 
     .search
         position: absolute;
