--- a/src/view/index.jade
+++ b/src/view/index.jade
@@ -13,7 +13,7 @@ html(lang="zh-Hans" ng-app="zifferArchive")
 
     body(ng-controller="TrackListController")
         .container
-            .logo
+            .logo(ng-class="{active: curState.track>0}")
                 h1(ng-click="curState.track=-1" ng-mouseenter="showIntro=1" ng-mouseleave="showIntro=0") Ziffer Projekt 
                 h2 
                     span.ng-hide-animate(ng-show="!openSearch") Archive | 
@@ -26,7 +26,7 @@ html(lang="zh-Hans" ng-app="zifferArchive")
                 input.search-box(type="text", placeholder="搜索..." ng-model="query")
 
 
-            .track(ng-repeat="track in tracks|searchTrack:query" ng-class="{active: curState.track===track._id}")
+            .track(ng-repeat="track in tracks | orderBy:'_id':1 | searchTrack:query" ng-class="{active: curState.track===track._id}")
                 .track-box
                     .track-front(ng-click="curState.track=track._id")
                         img(ng-src='images/covers/{{track._id}}.jpg')
