--- a/src/view/index.jade
+++ b/src/view/index.jade
@@ -19,7 +19,7 @@ html(lang="zh-Hans" ng-app="zifferArchive")
                     span.ng-hide-animate(ng-show="!openSearch") Archive | 
                     span.ng-hide-animate(ng-show="!openSearch") 归档
                     i.fa.fa-search(ng-class="{active: openSearch}", ng-click="toggleSearch()")
-                .intro(ng-show="showIntro" ng-mouseenter="showIntro=1") <span>Ziffer Project</span> 是一项ACG简谱制作项目，这里留存此项目的归档曲谱。
+                .intro(ng-show="showIntro" ng-mouseenter="showIntro=1") <span>Ziffer Projekt</span> 是一项ACG简谱制作项目，这里留存此项目的归档曲谱。
                     i.fa.fa-caret-left
 
             .search.ng-hide-animate(ng-show="openSearch" ng-model="query")
