--- a/src/view/index.jade
+++ b/src/view/index.jade
@@ -4,6 +4,7 @@ html(lang="zh-Hans" ng-app="zifferArchive")
         title Ziffer Projekt Archive
         meta(charset="utf-8")
         meta(name="viewport", content="width=device-width, initial-scale=1, user-scalable=no")
+        meta(name="description", content="Ziffer Projekt 是一项ACG简谱制作项目，这里留存此项目的归档曲谱。")
         link(rel='stylesheet', href='css/style.css')
         link(rel='stylesheet', href='css/font-awesome.min.css')
         link(rel='stylesheet', href='http://fonts.useso.com/css?family=Playball|Julius+Sans+One')
