Clean up & search btn text-shadow fix

--- a/src/view/css/style.styl
+++ b/src/view/css/style.styl
@@ -114,6 +114,8 @@ img
                 cursor: pointer;
                 color: #fff;
                 z-index: 3;
+                text-shadow: none;
+                -webkit-text-shadow: none;
 
             i.fa:hover
                 color: #eee;
